# AI-powered-finance-analyzer

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  sample_transactions.csv
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  transaction.py  user.py
backend/app/routers/: analytics.py  auth.py  transactions.py
backend/app/schemas/: analytics.py  auth.py  transaction.py
backend/app/services/: analytics_service.py  auth_service.py  category_service.py  csv_service.py  insights_service.py  transaction_service.py
backend/app/tests/: conftest.py  test_analytics.py  test_auth.py  test_category_service.py  test_csv_upload.py
backend/app/utils/: security.py
backend/finance_analyzer_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile  next-env.d.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: page.tsx
frontend/app/insights/: page.tsx
frontend/app/register/: page.tsx
frontend/app/transactions/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: AppShell.tsx  AuthForm.tsx  DashboardClient.tsx  InsightsClient.tsx  MetricCard.tsx  Recommendations.tsx  TransactionsClient.tsx  TransactionsTable.tsx  UploadClient.tsx
frontend/hooks/: useAuthGuard.ts
frontend/lib/: api.ts
frontend/types/: finance.ts
