[project]
name = "finance-analyzer-backend"
version = "0.1.0"
description = "FastAPI backend for a personal finance analyzer."
requires-python = ">=3.12"
dependencies = [
  "bcrypt>=4.1.3",
  "email-validator>=2.1.1",
  "fastapi>=0.111.0",
  "psycopg[binary]>=3.1.19",
  "pydantic-settings>=2.3.4",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.30",
  "uvicorn[standard]>=0.30.1"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.2",
  "ruff>=0.5.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

